# CppSerializer

./: CMakeLists.txt  Makefile  README.md  cpp_serialize.cpp  cpps
cmake/: Config.cmake.in
include/: serializer.h
src/: serializer.cpp
tests/: CMakeLists.txt  Makefile  test_array.cpp  test_basic.cpp  test_raw_data.cpp  test_string.cpp
